--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -14,7 +14,7 @@
                             {% if show.user.profile.profile_image %}
                                 <img class="rounded-circle" src="{{show.user.profile.profile_image.url}}"  alt="profile image" height="35" width="35">
                             {% endif %}
-                            <a class="nav-link text-dark" href="/user/{{show.user.id}}">{{show.user}}</a>
+                            <a class="nav-link text-light" href="/user/{{show.user.id}}">{{show.user}}</a>
                         </div>
                     </div>
                     {% if show.show_image %}
