--- a/user_app/templates/updateUser.html
+++ b/user_app/templates/updateUser.html
@@ -9,7 +9,7 @@
                 <div class="card-header">
                     <strong>Update Profile</strong>
                 </div>
-                <form class="m-3" method="POST" action="" enctype="multipart/form-data">
+                <form class="m-3" method="POST" action="">
                     {% csrf_token %}
                     {{ user_form.username.label_tag}}
                     {{ user_form.username }}
@@ -27,10 +27,9 @@
                     {{ user_form.password2 }}
                     {{ user_form.password2.errors }}
 
-                    {{profile_form.as_p}}
-
-                    <button class="btn btn-secondary" type="submit">Update</button>
+                    <button class="btn btn-secondary mt-3" type="submit">Update</button>
                 </form>
+                <a class="m-3 text-light" href="{% url 'updateImage' user.id %}">Update Image</a>
             </div>
         </div>
     </div>
