--- a/user_app/templates/user.html
+++ b/user_app/templates/user.html
@@ -40,6 +40,16 @@
             <a href="{% url 'updateUser' user.id %}">Update Profile</a>
             {% endif %}
         </div>
+        {% if request.user.id != user.id %}
+            <form action="" method="POST">
+                {% csrf_token %}
+                {% if profile in user.profile.followed_by.all %}
+                    <button class="btn btn-secondary" name="follow" value="unfollow" type="submit">Unfollow {{user.username}}</button>
+                {% else %}
+                    <button class="btn btn-secondary" name="follow" value="follow" type="submit">Follow {{user.username}}</button>
+                {% endif %} 
+            </form>
+        {% endif %}
     </div>
 </div>
 
