--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -8,17 +8,17 @@
     <div class="container mt-4 mb-4">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="card mb-4 ">
+                <div class="card mb-4">
                     <div class="card-header">
                         <div class="d-flex">
                             {% if show.user.profile.profile_image %}
-                                <img class="rounded-circle" src="{{show.user.profile.profile_image.url}}"  alt="profile image" height="35" width="35">
+                                <img class="rounded-circle profile_image" src="{{show.user.profile.profile_image.url}}"  alt="profile image" height="35" width="35">
                             {% endif %}
                             <a class="nav-link text-light" href="/user/{{show.user.id}}">{{show.user}}</a>
                         </div>
                     </div>
                     {% if show.show_image %}
-                        <a href="{% url 'viewShow' show.id %}"><img src="{{show.show_image.url}}" class="card-img" alt="show image"></a>
+                        <a href="{% url 'viewShow' show.id %}"><img src="{{show.show_image.url}}" class="mt-1 card-img fixed-image-size" alt="show image"></a>
                     {% endif %}
                     <div class="card-body">
                         <div class="d-flex justify-content-start">
