--- a/user_app/templates/navbar.html
+++ b/user_app/templates/navbar.html
@@ -8,7 +8,7 @@
         <ul class="navbar-nav ml-auto">
             {% if request.user.profile.profile_image %}
                 <li class="nav-item">
-                    <img class="rounded-circle" src="{{request.user.profile.profile_image.url}}"  alt="profile image" height="35" width="35">
+                    <img class="rounded-circle profile_image" src="{{request.user.profile.profile_image.url}}"  alt="profile image" >
                 </li>   
             {% endif %}
             <li class="nav-item active">
