--- a/user_app/templates/hero.html
+++ b/user_app/templates/hero.html
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
-    <h1 class="display-4">TV Party</h1>
+    <a class="text-decoration-none text-dark" href="{% url  'allShows'%}"><h1 class="display-4">TV Party</h1></a>
     <p class="lead">Lets Have a TV Party Tonight!</p>
 </div>
