--- a/user_app/templates/user.html
+++ b/user_app/templates/user.html
@@ -2,7 +2,11 @@
 {% block content %}
 {% include 'navbar.html' %}
 {% include 'hero.html' %}
-<div class="container mt-4 mb-4">
+<div>
+    
+</div>
+
+<!-- <div class="container mt-4 mb-4">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card mb-4">
@@ -51,7 +55,5 @@
             </form>
         {% endif %}
     </div>
-</div>
-
-
+</div> -->
 {% endblock %}
