--- a/user_app/templates/main.html
+++ b/user_app/templates/main.html
@@ -11,6 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}?{% now 'U' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="{% static 'js/script.js' %}"></script>
     
     <title>TV Party</title>
