--- a/user_app/templates/navbar.html
+++ b/user_app/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="https://github.com/Rossi-21">Rossi21</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,23 +6,29 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+               <a class="btn btn-light border border-4" href="{% url  'home'%}">CREATE</a> 
+            </li>
+    
+            <li class="nav-item dropdown"> <!-- Dropdown structure added -->
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    {{request.user}}
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/user/{{request.user.id}}">View User</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                </div>
+            </li>
             {% if request.user.profile.profile_image %}
                 <li class="nav-item">
                     <img class="rounded-circle profile_image" src="{{request.user.profile.profile_image.url}}"  alt="profile image" >
                 </li>   
             {% endif %}
-            <li class="nav-item active">
+            
+            <!-- <li class="nav-item active">
                 <a class="nav-link" href="/user/{{request.user.id}}">{{request.user}}</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url  'allShows'%}">All Shows</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url  'home'%}">Add a show</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url  'logout'%}">logout</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
