--- a/user_app/templates/updateImage.html
+++ b/user_app/templates/updateImage.html
@@ -16,7 +16,7 @@
 
                     <button class="btn btn-secondary" type="submit">Update</button>
                 </form>
-                <a class="m-3 text-light" href="{% url 'updateUser' user.id %}">Update Info</a>
+                <a class="m-3 text-dark" href="{% url 'updateUser' user.id %}">Update Info</a>
             </div>
         </div>
     </div>
