--- a/user_app/templates/updateUser.html
+++ b/user_app/templates/updateUser.html
@@ -29,7 +29,7 @@
 
                     <button class="btn btn-secondary mt-3" type="submit">Update</button>
                 </form>
-                <a class="m-3 text-light" href="{% url 'updateImage' user.id %}">Update Image</a>
+                <a class="m-3 text-dark" href="{% url 'updateImage' user.id %}">Update Image</a>
             </div>
         </div>
     </div>
