--- a/user_app/templates/navbar.html
+++ b/user_app/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://github.com/Rossi-21">Rossi21</a>
+    <a class="navbar-brand" href="https://github.com/Rossi-21"><img src="/static/images/logo_white.jpg" height="55" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
