--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -8,7 +8,7 @@
     <div class="container mt-4">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card mb-4">
+                <div class="card shadow-lg mb-4">
                     <div class="card-header d-flex align-items-center">
                         <div class="d-flex">
                             {% if show.user.profile.profile_image %}
