--- a/user_app/static/css/styles.css
+++ b/user_app/static/css/styles.css
@@ -12,7 +12,7 @@ body {
     font-family: 'Montserrat', sans-serif; /* Adding Montserrat font */
 }
 
-span, .margin-left{
+span, .margin-left {
     margin-left:1em;
 }
 
@@ -20,7 +20,11 @@ a {
     text-decoration: none;
 }
 
-.form-width, #btn-width{
+#like-button {
+    margin-left: -2%;
+}
+
+.form-width, #btn-width {
     width: 100%;
 }
 
@@ -34,10 +38,6 @@ a {
     width: 100%;
     padding: 0%;
 }
-
-/* .card-width{
-    width: 25%;
-} */
 
 .mt-3 {
     margin-top: 3% ;
