--- a/user_app/templates/hero.html
+++ b/user_app/templates/hero.html
@@ -1,4 +1,8 @@
 <div class="jumbotron text-center">
     <a class="text-decoration-none text-dark" href="{% url  'allShows'%}"><h1 class="display-4">TV Party</h1></a>
-    <p class="lead">Lets Have a TV Party Tonight!</p>
+    {% if data %}
+        <p class="lead">{{ data.choices.0.message.content }}</p>
+    {% else %}
+        <p class="lead">Let's Have a TV Party Tonight!</p>
+    {% endif %}
 </div>
