--- a/user_app/templates/navbar.html
+++ b/user_app/templates/navbar.html
@@ -23,7 +23,7 @@
                 </div>
             </li>
             <li class="nav-item">
-               <a class="btn btn-light border border-4" href="{% url  'home'%}">CREATE</a> 
+               <a class="btn btn-light border border-4" href="{% url  'createShow'%}">CREATE</a> 
             </li>
         </ul>
     </div>
